Added partner api on QA with swagger
