# weyyak_gcp/qa/api/partner/content/service.go
@@ -34,6 +34,9 @@ func (hs *HandlerService) Bootstrap(r *gin.Engine) {
 	srg.GET("/get_menu", hs.GetMenuDetails)
 	srg.GET("/get_page/:pageId", hs.GetPageDetails)
 	srg.GET("/get_info/:videoId", hs.GetVideoDuration)
+
+	srg.GET("/deleted-content", hs.GetDeletedContentDetails)
+	srg.GET("/modified-content", hs.GetModifiedContentDetails)
 }
 
 // Login -  Login user
