# weyyak_gcp/qa/api/partner/docs/swagger.yaml
@@ -980,6 +980,69 @@ paths:
       summary: User login with generate token
       tags:
       - Login
+  /deleted-content:
+    get:
+      consumes:
+      - application/json
+      description: Get All Deleted Content Keys
+      parameters:
+      - description: Enter start date to fetch data from the particular date.
+        in: query
+        name: from
+        type: string
+      - description: Enter end date to fetch data to that particular date.
+        in: query
+        name: to
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '"#/definitions/content.AllDeleted'
+        "404":
+          description: The object was not found.
+        "500":
+          description: Internal server error.
+          schema:
+            $ref: '#/definitions/content.ErrorResponse'
+      security:
+      - Authorization: []
+      tags:
+      - Deleted
+  /modified-content:
+    get:
+      consumes:
+      - application/json
+      description: Get All Modified Content Details
+      parameters:
+      - description: Enter start date to fetch data from the particular date.
+        in: query
+        name: from
+        type: string
+      - description: Enter end date to fetch data to that particular date.
+        in: query
+        name: to
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '"#/definitions/content.AllModified'
+        "404":
+          description: The object was not found.
+        "500":
+          description: Internal server error.
+          schema:
+            $ref: '#/definitions/content.ErrorResponse'
+      security:
+      - Authorization: []
+      tags:
+      - Modified
+  
 securityDefinitions:
   Authorization:
     in: header
